--- a/healthApp/Web.config
+++ b/healthApp/Web.config
@@ -12,12 +12,10 @@
     <!-- <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Login-20140121113314.mdf;Initial Catalog=aspnet-Login-20140121113314;Integrated Security=True"
       providerName="System.Data.SqlClient" />
       -->
-    <add name="DefaultConnection"
-       connectionString="Data Source=(LocalDB)\v11.0; AttachDbFilename=|DataDirectory|\default.mdf;Integrated Security=True"
-       providerName="System.Data.SqlClient"
-  />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\v11.0; AttachDbFilename=|DataDirectory|\default1.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="owin:AutomaticAppStartup" value="false" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -27,6 +25,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <sessionState mode="InProc" timeout="480" cookieless="false" />
   </system.web>
   <system.webServer>
     <modules>
@@ -49,7 +48,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
