--- a/healthApp/Web.config
+++ b/healthApp/Web.config
@@ -12,7 +12,7 @@
     <!-- <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Login-20140121113314.mdf;Initial Catalog=aspnet-Login-20140121113314;Integrated Security=True"
       providerName="System.Data.SqlClient" />
       -->
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\v11.0; AttachDbFilename=|DataDirectory|\default1.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=tcp:ql7vggtlbf.database.windows.net,1433;Database=haDB;User ID=haADMIN@ql7vggtlbf;Password=Ha!123456;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="owin:AutomaticAppStartup" value="true" />
@@ -65,6 +65,14 @@
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
       </dependentAssembly>
+			<dependentAssembly>
+				<AssemblyIdentity name = "Microsoft.Owin"
+								  publicKeyToken = "31bf3856ad364e35"
+								  culture = "neutral" />
+				<BindingRedirect oldVersion = "2.0.0.0"
+								 newVersion = "2.0.2.0" />
+			</dependentAssembly>
+		
     </assemblyBinding>
   </runtime>
   <entityFramework>
