Added a seed for clients

--- a/healthApp/Web.config
+++ b/healthApp/Web.config
@@ -77,13 +77,14 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-
     <contexts>
       <context type="healthApp.Models.AccountsDBContext, healthApp">
-        <databaseInitializer type="healthApp.DAL.myInit, healthApp" />
+        <databaseInitializer type="healthApp.DAL.AccountInit, healthApp" />
+      </context>
+      <context type="healthApp.Models.ClientDBContext, healthApp">
+        <databaseInitializer type="healthApp.DAL.ClientInit, healthApp" />
       </context>
     </contexts>
-
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
