Added database seed info for tasks

--- a/healthApp/Web.config
+++ b/healthApp/Web.config
@@ -84,6 +84,9 @@
       <context type="healthApp.Models.ClientDBContext, healthApp">
         <databaseInitializer type="healthApp.DAL.ClientInit, healthApp" />
       </context>
+      <context type="healthApp.Models.TaskDBContext, healthApp">
+        <databaseInitializer type="healthApp.DAL.TaskInit, healthApp" />
+      </context>
     </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
